fixes radio options overflow

--- a/wp-content/themes/connectIN/styles/wheat-profit-calculator.css
+++ b/wp-content/themes/connectIN/styles/wheat-profit-calculator.css
@@ -268,6 +268,10 @@ YIELD CALCULATIONS FORM
      padding: 10px 0;
    }
   }
+
+  .yieldformcalc__ctn #radiooptions__ctn > div {
+    right: 0;
+  }
 }
 
 #graph_maximize_revenue_section ,
